# ansible-role-bind

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  collections.yml  pyproject.toml
.github/workflows/: dev.yml  main.yml
defaults/: main.yml
handlers/: main.yml
meta/: argument_specs.yml  main.yml  requirements.yml
molecule/all/: molecule.yml
molecule/default/: molecule.yml
molecule/dev/: molecule.yml
molecule/dnssec/: molecule.yml  verify.yml
molecule/forwarder/: molecule.yml  verify.yml
molecule/libvirt/: molecule.yml
molecule/multi/: molecule.yml  verify.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
tasks/: assert.yml  facts.yml  main.yml  tsig.yml  zone.yml
templates/: named.conf.j2  named.conf.local.j2  named.conf.options.j2  tsig.j2  zone.j2
templates/Debian/: named.conf.j2  named.conf.local.j2  named.conf.options.j2
templates/RedHat/: named.conf.j2
templates/common/: acls.j2  controls.j2  http.j2  logging.j2  options.j2  primaries.j2  role-statements.j2  tls.j2  tsig-includes.j2  zones.j2
vars/: Debian.yml  Fedora.yml  RedHat.yml  Suse.yml  main.yml
