[project]
name = "bind"
version = "0.0.0"
description = "Ansible role for setting up the ISC BIND DNS Server."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = ["bind", "named", "dns", "zone"]
repository = "https://github.com/jomrr/ansible-role-bind"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
commit_message = "build(release): version {version}"
major_on_zero = false
upload_to_pypi = false
upload_to_vcs_release = true
version_toml = ["pyproject.toml:project.version"]

[tool.tox]
envlist = ["lint"]

[tool.tox.env.lint]
description = "Lint code"
skip_install = true
deps = ["ansible-lint"]
commands = [["ansible-lint", "--offline"]]
